--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,149 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+/* reset ~ */
+body,
+ul,ol, 
+h1,h2,h3,h4,h5,h6,
+p{
   margin: 0;
+  padding: 0;
 }
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  font-size: 16px;
+  line-height: 1.5;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+ul {
+  list-style: none;
 }
-
 a {
-  color: inherit;
   text-decoration: none;
+  color: inherit;
+}
+button {
+  border: 0;
+}
+textarea {
+  resize: none;
+}
+/* ~ reset */
+
+.header {
+  height: 78px;
+  background-color: #fff;
+  border-bottom: 1px solid rgba(173, 173, 173, 0.25);
+}
+.nav-list {
+  display: flex;
+  align-items: center;
+  max-width: 1000px;
+  height: 78px;
+  margin: 0 auto;
+}
+.nav-item {
+  padding: 20px;
+  font-size: 18px;
+}
+.nav-item.active {
+  font-weight: bold;
+}
+.container {
+  max-width: 1000px;
+  padding: 80px 0;
+  margin: 0 auto;
+}
+.heading {
+  padding-bottom: 20px;
+  margin-bottom: 84px;
+  border-bottom: 1px solid #2B2B2B;
+}
+.title {
+  margin-bottom: 15px;
+  font-size: 28px;
+}
+.desc {
+  font-size: 15px;
+  color: rgba(43, 43, 43, 0.6);
+}
+.post-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.post-item {
+  width: 50%;
+  flex-grow: 1;
+  margin: 0 60px 60px 0;
+}
+.post-item:nth-child(even) {
+  margin-right: 0;
+}
+.post-title { 
+  margin-bottom: 15px;
+  font-size: 24px;
+  line-height: 36px;
+}
+.post-subtitle {
+  margin-bottom: 15px;
+  color: rgba(43, 43, 43, 0.6);
+}
+.post-content {
+  margin-top: 50px;
+  font-size: 16px;
+  color: rgba(43, 43, 43, 0.8);
+}
+.write-info {
+  margin-bottom: 15px;
+  font-size: 15px;
+  color: rgba(43, 43, 43, 0.3);
+}
+.write-info .writer::after {
+  content: '';
+  display: inline-block;
+  width: 1px;
+  height: 14px;
+  margin: 0 10px;
+  background-color: rgba(43, 43, 43, 0.4);
+  vertical-align: top;
+  margin-top: 2px;
+}
+.badge {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 95px;
+  height: 32px;
+  margin-bottom: 15px;
+  font-size: 15px;
+  border-radius: 16px;
+  border: 1px solid #fd79a8;
+  color: #fd79a8;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+input, textarea {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  padding: 16px; 
+  margin-bottom: 15px;
+  font-size: 15px;
+  color: #2B2B2B;
+  border: 1px solid rgba(173, 173, 173, 0.25);
+
 }
+input[name="title"] {
+  height: 48px;
+}
+textarea[name="content"] {
+  height: 500px;
+}
+button[type="submit"] {
+  width: 100%;
+  height: 48px;
+  font-size: 15px;
+  background-color: #fdcb6e;
+  cursor: pointer;
+}
+.flex-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
