button reset css 적용

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,9 @@ a {
   color: inherit;
 }
 button {
+  font-size: 16px;
   border: 0;
+  background-color: transparent;
 }
 textarea {
   resize: none;
