--- a/app/globals.css
+++ b/app/globals.css
@@ -22,16 +22,12 @@ button {
   border: 0;
   background-color: transparent;
   cursor: pointer;
+  color: #000;
 }
 textarea {
   resize: none;
 }
 /* ~ reset */
-.flex-row {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
 .container {
   max-width: 1000px;
   padding: 80px 0;
@@ -104,7 +100,6 @@ textarea {
   color: rgba(43, 43, 43, 0.8);
 }
 .write-info {
-  margin-bottom: 15px;
   font-size: 15px;
   color: rgba(43, 43, 43, 0.3);
 }
@@ -114,9 +109,9 @@ textarea {
   width: 1px;
   height: 14px;
   margin: 0 10px;
-  background-color: rgba(43, 43, 43, 0.4);
+  background-color: rgba(43, 43, 43, 0.3);
   vertical-align: top;
-  margin-top: 2px;
+  margin-top: 3px;
 }
 /* .badge {
   display: flex;
@@ -136,7 +131,7 @@ input, textarea {
   width: 100%;
   padding: 16px; 
   margin-bottom: 15px;
-  font-size: 15px;
+  font-size: 16px;
   color: #2B2B2B;
   border: 1px solid rgba(173, 173, 173, 0.25);
 }
@@ -149,32 +144,56 @@ textarea[name="content"] {
 button[type="submit"] {
   width: 100%;
   height: 48px;
-  font-size: 15px;
-  background-color: #fdcb6e;
+  font-size: 16px;
+  background-color: #fcd25c;
+  color: #000;
   cursor: pointer;
 }
-.button-edit {
-  margin-right: 15px;
-}
 .button-login {
-  font-size: 14px;
   flex-shrink: 0;
+  font-size: 15px;
 }
-.button-out {
-  width: 100%;
-  height: 100%;
+.button-group {
+  display: flex;
+  margin: 50px 0 0 -6px;
+}
+.button-edit,
+.button-delete {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  font-size: 15px;
+}
+.button-edit {
+  margin-right: 12px;
+}
+.icon-writing,
+.icon-edit,
+.icon-delete {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.icon-writing img,
+.icon-edit img {
+  display: block;
+  width: 28px;
+}
+.icon-delete img {
+  width: 27px;
 }
 .my-menu-button {
   flex-shrink: 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 .avatar {
   width: 32px;
   height: 32px;
-  margin-bottom: 8px;
+  margin: 0 10px 0 4px;
   border-radius: 50%;
   overflow: hidden;
 }
@@ -196,6 +215,14 @@ button[type="submit"] {
   height: 38px;
   text-align: center;
 }
+@media screen and (max-width: 1000px) {
+  .header .inner {
+    padding: 0 20px;
+  }
+  .container {
+     padding: 50px 20px;
+  }
+}
 @media screen and (max-width: 750px) {
   body {
     font-size: 15px;
@@ -203,7 +230,6 @@ button[type="submit"] {
   }
   .container {
     max-width: 750px;
-    padding: 50px 15px;
   }
   .header {
     height: 50px;
@@ -247,9 +273,9 @@ button[type="submit"] {
   }
   .write-info .writer::after {
     width: 1px;
-    height: 13px;
+    height: 12px;
     margin: 0 8px;
-    margin-top: 1px;
+    margin-top: 2px;
   }
   input, textarea {
     padding: 15px; 
@@ -259,10 +285,22 @@ button[type="submit"] {
   button {
     font-size: 15px;
   }
-  .button-edit {
-    margin-right: 8px;
+  .button-group {
+    margin: 30px 0 0 -10px;
   }
-  .button-login {
-    font-size: 15px;
+  .button-edit {
+    margin-right: 0px;
+  }
+  .icon-writing img,
+  .icon-edit img {
+    width: 20px;
+  }
+  .icon-delete img {
+    width: 20px;
+  }
+  .avatar {
+    width: 24px;
+    height: 24px;
+    margin-right: 4px;
   }
 }
